fixed form size on mobile

--- a/css/volunteer.css
+++ b/css/volunteer.css
@@ -369,6 +369,10 @@ form p{
             justify-content: flex-end;
 }
 
+#contact-strip {
+    margin-top: 100px;
+}
+
 .contact-right {
     padding-top: 50px;
     padding-bottom: 50px;
